--- a/src/templates/contest/contest.html
+++ b/src/templates/contest/contest.html
@@ -61,7 +61,7 @@
                 </a></td>
                 <td>{{ row["category"] }}</td>
                 {% if row["dynamic"] %}
-                    <td title="This problem is dynamically scored">{{ row["point_value"] }}D</td>
+                    <td title="This problem is dynamically scored">{{ row["point_value"] }}*</td>
                 {% else %}
                     <td>{{ row["point_value"] }}</td>
                 {% endif %}
