--- a/src/templates/home_fragment/home2.html
+++ b/src/templates/home_fragment/home2.html
@@ -14,7 +14,7 @@
         </div>
         <h3>{{ announcement["name"] }}</h3>
         <p style="margin: 0;">Posted <span class="dt">{{ announcement["date"] }}</span></p>
-        <div id="announcement-{{ announcement['id'] }}" class="hidden smarkdown"></div>
+        <div id="announcement-{{ announcement['id'] }}" class="smarkdown"></div>
     </div>
 {% endfor %}
 <div id="pagination" data-pages="{{ props['length'] }}"></div>
@@ -33,7 +33,7 @@
             return;
         }
         for (let id of idList) {
-            inject(document.getElementById("announcement-" + id), b["data"][id], true);
+            inject(document.getElementById("announcement-" + id), b["data"][id], false);
         }
         seeMore();
     });
