--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="theme-color" content="#0d6efd">
 
-        <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
         <link href="/assets/css/style.css" rel="stylesheet">
         <link href="/static/favicon.png" rel="icon">
 
@@ -109,6 +109,6 @@
         <script src="/assets/js/seeMore.js"></script>
         <script src="/assets/js/newPagination.js"></script>
         <script src="/assets/js/dateConvert.js"></script>
-        <script src="/assets/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     </body>
 </html>
