Display bug fixes

--- a/src/templates/admin/edithomepage.html
+++ b/src/templates/admin/edithomepage.html
@@ -42,7 +42,7 @@
                   required></textarea>
         <div id="preview" class="md-preview">
             <div class="card" class="home1">
-                <div id="home"></div>
+                <div id="home" class="smarkdown"></div>
             </div>
         </div>
     </div>
