--- a/src/templates/home_fragment/home1.html
+++ b/src/templates/home_fragment/home1.html
@@ -4,7 +4,7 @@
 
 {% block main %}
 <div id="home-container">
-    <div id="home"></div>
+    <div id="home" class="smarkdown"></div>
 </div>
 {% endblock %}
 {% block script %}
