--- a/src/templates/home_fragment/home2.html
+++ b/src/templates/home_fragment/home2.html
@@ -4,7 +4,7 @@
 
 {% block main %}
 <div class="card home2" id="home-container">
-    <div id="home" class="hidden"></div>
+    <div id="home" class="smarkdown"></div>
 </div>
 <h2>Announcements</h2>
 {% for announcement in props["data"] %}
