[skip ci] bug fix

--- a/src/templates/contest/contests.html
+++ b/src/templates/contest/contests.html
@@ -9,7 +9,7 @@
 	There are no future contests.
 {% endif %}
 {% for contest in future %}
-    <div class="card post-card" style="max-height: 600px;">
+    <div class="card post-card">
         <div class="see-more-wrapper">
             <a href="#" class="see-more" style="margin-left: 8px;">See More</a>
         </div>
@@ -41,7 +41,7 @@
 	There are no ongoing contests.
 {% endif %}
 {% for contest in current %}
-    <div class="card post-card" style="max-height: 600px;">
+    <div class="card post-card">
         <div class="see-more-wrapper">
             <a href="#" class="see-more" style="margin-left: 8px;">See More</a>
         </div>
@@ -73,7 +73,7 @@
 	There are no past contests.
 {% endif %}
 {% for contest in past %}
-    <div class="card post-card" style="max-height: 600px;">
+    <div class="card post-card">
         <div class="see-more-wrapper">
             <a href="#" class="see-more" style="margin-left: 8px;">See More</a>
         </div>
