[skip ci] minor wording change

--- a/src/templates/contest/scoreboard.html
+++ b/src/templates/contest/scoreboard.html
@@ -21,7 +21,7 @@
                 <th scope="col" style="width: 12%;">Rank</th>
                 <th scope="col" style="width: 40%;">Username</th>
                 <th scope="col" style="width: 18%;">Points</th>
-                <th scope="col" style="width: 30%;">Most recent AC submission</th>
+                <th scope="col" style="width: 30%;">Latest correct flag</th>
                 {% if check_perm(["ADMIN", "SUPERADMIN"]) %}
                     <th scope="col" style="width: 10%">Actions</th>
                 {% endif %}
