--- a/src/templates/ranking.html
+++ b/src/templates/ranking.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}Practice Leaderboard{% endblock %}
-{% block active %}Practice Leaderboard{% endblock %}
+{% block active %}Users{% endblock %}
 
 {% block main %}
 <h1>Practice Leaderboard</h1>
