--- a/src/templates/contest/contest.html
+++ b/src/templates/contest/contest.html
@@ -6,6 +6,9 @@
 {% block main %}
 <div style="position: relative; margin-bottom: 0.5rem;">
     <h1 style="display: inline;">{{ title }}</h1>
+    <div style="display: inline; margin-left: 4px;">
+        <a class="btn btn-success" style="margin-top: -18px;" href="{{ request.path }}/scoreboard">Leaderboard</a>
+    </div>
     {% if check_perm(["ADMIN", "SUPERADMIN", "CONTENT_MANAGER"]) %}
         <div class="dropdown" style="display: inline; margin-left: 4px;">
             <button class="btn btn-secondary dropdown-toggle" type="button"
@@ -26,6 +29,10 @@
                    href="/api/contest/scoreboard/{{ request.path[9:] }}?key={{ scoreboard_key }}"
                    target="_blank">View CTFtime Scoreboard</a>
             </div>
+        </div>
+    {% else %}
+        <div style="display: inline; margin-left: 4px;">
+            <a class="btn btn-secondary" style="margin-top: -18px;" href="{{ request.path }}/submissions">My Submissions</a>
         </div>
     {% endif %}
 </div>
