--- a/src/templates/problem/archived_list.html
+++ b/src/templates/problem/archived_list.html
@@ -30,7 +30,7 @@
         {% endfor %}
     </select>
 </div>
-<div class="mb-1"><a href="/problems">Back to unarchived problems</a></div>
+<div class="mb-1" style="margin-top: -1rem;"><a href="/problems">Back to unarchived problems</a></div>
 <div style="overflow-x: auto;">
     <table class="table table-hover table-full-width">
         <thead class="table-dark">
