--- a/src/templates/problem/problems.html
+++ b/src/templates/problem/problems.html
@@ -32,7 +32,7 @@
         {% endfor %}
     </select>
 </div>
-<div class="mb-1"><a href="/problems/archived">View archived problems</a></div>
+<div class="mb-1" style="margin-top: -1rem;"><a href="/problems/archived">View archived problems</a></div>
 <div style="overflow-x: auto;">
     <table class="table table-hover table-full-width">
         <thead class="table-dark">
