--- a/src/templates/error/maintenance.html
+++ b/src/templates/error/maintenance.html
@@ -39,6 +39,7 @@
                 We are currently undergoing scheduled maintenance. We will be back soon.
                 Thank you for your patience.
             </p>
+            <p>{{ msg }}</p>
         </main>
         <footer>
             <hr>
