Static pages using iframes

--- a/src/templates/admin/console.html
+++ b/src/templates/admin/console.html
@@ -62,12 +62,14 @@
     <div class="col-sm-6 admin-card">
         <div class="card bg-ld-blue">
             <div class="card-body">
-                <h5 class="card-title">Manage Homepage</h5>
+                <h5 class="card-title">Manage Static Pages</h5>
                 <p class="card-text">Edit and preview your homepage, if enabled in site settings.</p>
                 <a class="btn btn-primary" href="/admin/edithomepage" role="button">Edit Homepage</a>
-                <br>
-                <br>
+                &nbsp;&nbsp;&nbsp;&nbsp;
                 <a class="btn btn-primary" href="/admin/previewhomepage" role="button">Preview Homepage</a>
+                <br>
+                <br>
+                <a class="btn btn-primary" href="/admin/staticpages" role="button">Manage Static Pages</a>
             </div>
         </div>
     </div>
